    resolution so that we can reproduce plots regardless of the source
    device that 'gridToSVG' grabs a grid scene from. (Simon)

12. Added a new option to 'gridSVG', 'indent'. This either exports SVG
    with hierarchical indentation, or none at all. All output occurs in
    one line in the case that the 'indent' option is 'FALSE'. (Simon)


Changes from 0.9-0 to 0.9-4
===========================

1.  Added dependency on R >= 2.15.0
 
    (plotmath location depends on grobAscent())

2.  gridToSVG() now copes with empty text, e.g., grid.text("").

    SVG elements are still produced (so that there is something 
    in the SVG doc that corresponds to the original grid grob),
    but nothing should be drawn when the SVG doc is viewed.

    Reported by Gabriel Becker.

3.  gridToSVG() no longer ignores 'hjust' and 'vjust' in grid.rect().

    Reported by Gabriel Becker.

4.  Conversion of points grobs for pch=15:20 now sets colours correctly
    (used to be wrong if points grob did not have explicit gpar(col) 
     setting).

5.  Improved animation of x/y/size for points grobs.

    Now works for pch=0,1,2, 5,6, 15--25 
    
    (i.e., does not work yet symbols that are combinations of shapes)

6.  Fixed problem with raster aspect ratio.

7.  Fixed problem with animating raster grobs when width and/or
    height are not specified.

8.  Fixed bug in animating segments grobs (used to just not work).

9.  Added support for 'roundrect' grobs.

10. Added support for 'move.to' and 'line.to' grobs.

11. Rounding more SVG attributes to 2dp, only a few were missed ealier.
    (Simon)

12. Points grobs for pch=15:20 now check whether there is an explicit
    gpar(col). If so, the fill is set to that, otherwise this is
    retrieved from the viewport. (Simon)


Changes from 0.8-0 to 0.9-0
===========================

1.  Added dependency on R >= 2.13.0

    (grid.grab(wrap=TRUE) only works with bug fix in r54813).
